added basic html setup & some css styling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How To Create A Sticky Footer</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header>
+        <h1>Header</h1>
+        <p>Usually contains company name or logo, site navigation and other introductory content.</p>
+    </header>
     <main>
-        <header>
-            <h1>Header</h1>
-            <p>Usually contains company name or logo, site navigation and other introductory content.</p>
-        </header>
+        <h2>Main</h2>
+        <p>Contains the majority of the website content, which will vary based on the type of website.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam numquam enim fuga dignissimos illum sint.
+        </p>
     </main>
+    <footer>
+        <h2>Footer</h2>
+        <p>Contains content that is common to the entire website such as contact or copyright information.</p>
+    </footer>
 </body>
+
 </html>
